[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/monsters/Gobo.gd" type="Script" id=1]
[ext_resource path="res://assets/monsters/gobo/Gobo.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/enemyHit.smp" type="Sample" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32.7383, 32.8212 )

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 5.52118
height = 48.6514

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/enemyHit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="Gobo" type="RigidBody2D"]

transform/pos = Vector2( 639, 352 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -2.2 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0, 36.8 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityEnabler" type="VisibilityEnabler2D" parent="."]

transform/pos = Vector2( 1.90735e-05, 2.5 )
transform/scale = Vector2( 29, 19.25 )
rect = Rect2( -10, -10, 20, 20 )
enabler/pause_animations = true
enabler/freeze_bodies = true
enabler/pause_particles = true
enabler/pause_animated_sprites = true
enabler/process_parent = false
enabler/fixed_process_parent = false
__meta__ = {
"_edit_lock_": true
}

[node name="Shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -2.2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Feet" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 36.8 )
transform/rot = 90.0
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Detect_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -35, 0 )
enabled = true
cast_to = Vector2( 0, 45 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Detect_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 35, 0 )
enabled = true
cast_to = Vector2( 0, 45 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Sample" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="HitTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false


